# CellTrack

./: .gitignore  CMakeLists.txt
cmake/: FindOpenCV.cmake  FindWxWidgets.cmake
src/: CMakeLists.txt  CaptureManager.cpp  CaptureManager.h  CustomEvents.cpp  CustomEvents.h  ImageJobQueue.cpp  ImageJobQueue.h  ImageLoader.cpp  ImageLoader.h  ImagePlus.cpp  ImagePlus.h  MyApp.cpp  MyCanvas.cpp  MyCanvas.h  MyCapture.cpp  MyCapture.h  MyFrame.cpp  MyFrame.h  PictureCanvas.cpp  PluginBase.cpp  PluginBase.h  Preferences.cpp  Preferences.h  Util.cpp  Util.h  cvSnakeTrack.cpp
src/gui/: Gui.cpp  Gui.h  wxFormBuilder_project.fbp  wxTextCtrl_double.h
src/gui/images/: all_icons.xpm  xpm_disabled_fluorescence.xpm  xpm_fluorescence.xpm  xpm_hover_fluorescence.xpm
src/lib/wxMathPlot-0.1.2/: mathplot.cpp
src/lib/wxmathplot-0.03/: mpFXVector.cpp
src/plugins/: CamShiftPlugin.cpp  CamShiftPlugin.h  CombinedTrackingPlugin.cpp  CombinedTrackingPlugin.h  CopyContoursPlugin.cpp  CopyContoursPlugin.h  CopyContoursSidebar.cpp  CopyContoursSidebar.h  CorrectContoursPlugin.cpp  CorrectContoursPlugin.h  CorrectContoursSidebar.cpp  CorrectContoursSidebar.h  CropPlugin.cpp  CropPlugin.h  EditContoursPlugin.cpp  EditContoursPlugin.h  EditContoursSidebar.cpp  FilterContoursPlugin.cpp  FilterContoursPlugin.h  FindContoursPlugin.cpp  FindContoursPlugin.h  FindContoursSidebar.cpp  FindContoursSidebar.h  FindFeaturesPlugin.cpp  FindFeaturesPlugin.h  ImproveContoursPlugin.cpp  ImproveContoursPlugin.h  IncludePlugins.h  LKContoursPlugin.cpp  LKContoursPlugin.h  MatchTemplatePlugin.cpp  MatchTemplatePlugin.h  NormalizeContoursPlugin.cpp  NormalizeContoursPlugin.h  PluginDefinitions.h  SmoothPlugin.cpp  SmoothPlugin.h  SubtractBackgroundPlugin.cpp  SubtractBackgroundPlugin.h  TrackContoursPlugin.cpp  (+1 more)
